update normalize.css attribution

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -15,7 +15,7 @@ This theme, like WordPress, is licensed under the GPL.
 Based on Underscores http://underscores.me/, (C) 2012-2015 Automattic, Inc.
 
 Normalizing styles have been helped along thanks to the fine work of
-Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
+Bo-Yi Wu (https://github.com/appleboy/), Nicolas Gallagher (https://github.com/necolas), and Jonathan Neal (https://github.com/jonathantneal).
 */
 
 @import "bourbon";
