--- a/style.css
+++ b/style.css
@@ -783,12 +783,13 @@ a:active {
 /* line 45, sass/modules/_navigation.scss */
 
 .main-navigation ul {
+	display: none;
 	list-style: none;
 	margin: 0;
 	padding-left: 0;
 }
 
-/* line 51, sass/modules/_navigation.scss */
+/* line 52, sass/modules/_navigation.scss */
 
 .main-navigation ul ul {
 	box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
@@ -799,53 +800,56 @@ a:active {
 	z-index: 99999;
 }
 
-/* line 60, sass/modules/_navigation.scss */
+/* line 61, sass/modules/_navigation.scss */
 
 .main-navigation ul ul ul {
 	left: -999em;
 	top: 0;
 }
 
-/* line 68, sass/modules/_navigation.scss */
+/* line 69, sass/modules/_navigation.scss */
 
-.main-navigation ul ul li:hover > ul {
+.main-navigation ul ul li:hover > ul,
+.main-navigation ul ul li.focus > ul {
 	left: 100%;
 }
 
-/* line 81, sass/modules/_navigation.scss */
+/* line 85, sass/modules/_navigation.scss */
 
 .main-navigation ul a {
 	height: auto;
 	width: 200px;
 }
 
-/* line 86, sass/modules/_navigation.scss */
+/* line 90, sass/modules/_navigation.scss */
 
-.main-navigation ul li:hover > ul {
+.main-navigation ul li:hover > ul,
+.main-navigation ul li.focus > ul {
 	left: auto;
 }
 
-/* line 92, sass/modules/_navigation.scss */
+/* line 97, sass/modules/_navigation.scss */
 
 .main-navigation li {
 	float: left;
 	position: relative;
 }
 
-/* line 101, sass/modules/_navigation.scss */
+/* line 107, sass/modules/_navigation.scss */
 
 .main-navigation a {
 	display: block;
 	text-decoration: none;
 }
 
-/* line 114, sass/modules/_navigation.scss */
+/* line 119, sass/modules/_navigation.scss */
 
-.menu-toggle {
-	display: none;
+.menu-toggle,
+.main-navigation.toggled ul {
+	display: block;
 }
 
-/* line 133, sass/modules/_navigation.scss */
+/* line 138, sass/modules/_navigation.scss */
 
 .site-main .comment-navigation,
 .site-main
@@ -856,7 +860,7 @@ a:active {
 	overflow: hidden;
 }
 
-/* line 138, sass/modules/_navigation.scss */
+/* line 143, sass/modules/_navigation.scss */
 
 .comment-navigation .nav-previous,
 .posts-navigation .nav-previous,
@@ -866,7 +870,7 @@ a:active {
 	float: left;
 }
 
-/* line 144, sass/modules/_navigation.scss */
+/* line 149, sass/modules/_navigation.scss */
 
 .comment-navigation .nav-next,
 .posts-navigation .nav-next,
@@ -1264,6 +1268,22 @@ Infinite scroll
 	display: none;
 }
 
+@media screen and (min-width: 37.5em) {
+
+/* line 125, sass/modules/_navigation.scss */
+
+.menu-toggle {
+	display: none;
+}
+
+/* line 129, sass/modules/_navigation.scss */
+
+.main-navigation ul {
+	display: block;
+}
+
+}
+
 @media (min-width: 64em) {
 
 /* line 19, sass/structure/_layout.scss */
@@ -1305,23 +1325,6 @@ Infinite scroll
 
 .site-content {
 	margin: 40px auto 60px;
-}
-
-}
-
-@media screen and (max-width: 600px) {
-
-/* line 119, sass/modules/_navigation.scss */
-
-.menu-toggle,
-.main-navigation.toggled .nav-menu {
-	display: block;
-}
-
-/* line 124, sass/modules/_navigation.scss */
-
-.main-navigation ul {
-	display: none;
 }
 
 }
