--- a/sass/base/_elements.scss
+++ b/sass/base/_elements.scss
@@ -11,11 +11,11 @@ object {
 }
 
 hr {
-	@include margin(0 0 24px 0);
 	@include size(auto 1px);
 
 	background-color: $color-background-hr;
 	border: 0;
+	margin: 0 0 rem(24) 0;
 }
 
 figure {
@@ -26,7 +26,7 @@ figure {
 
 ul,
 ol {
-	@include margin(0 0 48px 24px);
+	margin: 0 0 rem(48) rem(24);
 }
 
 ul {
@@ -39,7 +39,7 @@ ol {
 
 li > ul,
 li > ol {
-	@include margin(0 0 0 24px);
+	margin: 0 0 0 rem(24);
 }
 
 dt {
@@ -47,14 +47,15 @@ dt {
 }
 
 dd {
-	@include margin(0 24px 24px 0);
+	margin: 0 rem(24) rem(24) 0;
 }
 
 // Tables
 
 table {
-	@include margin(0 0 24px 0);
 	@include size(100% auto);
+	
+	margin: 0 0 rem(24) 0;
 }
 
 th {
