better social (icons) menu

--- a/sass/utilities/variables/_icon-font-awesome.scss
+++ b/sass/utilities/variables/_icon-font-awesome.scss
@@ -25,7 +25,16 @@ $icons: (
 	navicon: "\f0c9",
 	search: "\f002",
 	facebook: "\f09a",
+	facebook-square: "\f082",
 	instagram: "\f16d",
 	twitter: "\f099",
+	twitter-square: "\f081",
 	youtube: "\f167",
+	youtube-square: "\f166",
+	linkedin: "f0e1",
+	linkedin-square: "\f08c",
+	pinterest: "\f0d2",
+	pinterest-square: "\f0d3",
+	rss: "\f09e",
+	rss-square: "\f143",
 );
