add google+ to $icons map

--- a/sass/utilities/variables/_icon-font-awesome.scss
+++ b/sass/utilities/variables/_icon-font-awesome.scss
@@ -29,6 +29,8 @@ $icons: (
 	instagram: "\f16d",
 	twitter: "\f099",
 	twitter-square: "\f081",
+	google-plus: "\f0d5",
+	google-plus-square: "\f0d4",
 	youtube: "\f167",
 	youtube-square: "\f166",
 	linkedin: "f0e1",
