Changing #ID to .class for primary and secondary content areas

--- a/sass/structure/_layout.scss
+++ b/sass/structure/_layout.scss
@@ -1,6 +1,6 @@
 //--------------------------------------------------------------
 // Base Layout
-//--------------------------------------------------------------*/
+//--------------------------------------------------------------
 
 // Structure
 
@@ -16,7 +16,7 @@
 	}
 }
 
-#primary {
+.primary {
 	@include fill-parent;
 
 	@include wider-than(tablet-landscape) {
@@ -24,7 +24,7 @@
 	}
 }
 
-#secondary {
+.secondary {
 	@include fill-parent;
 
 	@include wider-than(tablet-landscape) {
