formatting sass partial headers for consistency

--- a/sass/plugins/_jetpack.scss
+++ b/sass/plugins/_jetpack.scss
@@ -1,6 +1,6 @@
-/*--------------------------------------------------------------
-Infinite scroll
---------------------------------------------------------------*/
+//--------------------------------------------------------------
+// Infinite scroll
+//--------------------------------------------------------------
 
 // Globally hidden elements when Infinite Scroll is supported and in use.
 
