--- a/sass/utilities/variables/_breakpoints.scss
+++ b/sass/utilities/variables/_breakpoints.scss
@@ -1,4 +1,7 @@
+//--------------------------------------------------------------
 // Media Query Breakpoints
+//--------------------------------------------------------------
+
 /// Breakpoints Sass list map for Media Queries @mixin
 /// @group wds
 $breakpoints: (
