--- a/sass/utilities/variables/_colors.scss
+++ b/sass/utilities/variables/_colors.scss
@@ -1,6 +1,6 @@
 //--------------------------------------------------------------
 // Colors
-// -------------------------------------------------------------
+//-------------------------------------------------------------
 
 $color-blue: #21759b;
 $color-dark-gray: #666666;
