--- a/sass/utilities/variables/_typography.scss
+++ b/sass/utilities/variables/_typography.scss
@@ -1,6 +1,6 @@
 //--------------------------------------------------------------
 // Typography
-// -------------------------------------------------------------
+//--------------------------------------------------------------
 
 $font-sans:  "Open Sans", sans-serif;
 $font-serif: Roboto, Georgia, Times, "Times New Roman", serif;
